# advent_of_code

./: 1_1.py  benchmark.py  pyproject.toml  requirements.txt
day1/: 1_2.py
day2/: 1.py  2.py  test.py  test_input.txt  utils.py
day3/src/: 1.py  2.py  utils.py
day3/tests/: test_utils.py
day4/: logging_utils.py  main.py  utils.py
day5/: main.py  tests.py  utils.py
day6/: test_utils.py  utils.py
